--- a/index.html
+++ b/index.html
@@ -13,23 +13,32 @@
 <!--Comienzo del Header-->
 
 <header>
-    <nav class="nav">
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link disabled">Disabled</a>
-      </nav>
+  <ul class="nav justify-content-end">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Disabled</a>
+    </li>
+  </ul>
 </header>
 
 <!--Comienzo Del Main-->
 <main>
+
 <!--Colocando Card-->
     <div class="productos">
         <div class="seguridad">
             <div class="card" style="width: 18rem;">
                 <img src="./assets/img/D_NQ_NP_963820-MLA49967077030_052022-W.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">AX-PRO</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Agregar al Carrito</a>
                 </div>
