--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--Comienzo del Header-->
 
 <header>
-  <ul class="nav justify-content-end">
+  <!-- <ul class="nav justify-content-end">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
@@ -26,12 +26,12 @@
     <li class="nav-item">
       <a class="nav-link disabled">Disabled</a>
     </li>
-  </ul>
+  </ul> -->
   <!-- Agregando el Carrito -->
   <div class="container">
     <div class="row">
         <div class="four columns">
-            <img src="img/logo.jpg" id="logo">
+            <img src="" id="logo">
         </div>
         <div class="two columns u-pull-right">
             <ul>
@@ -52,27 +52,25 @@
                                     <tbody></tbody>
                                 </table>
 
-                                <a href="#" id="limpiar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                                <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
                         </div>
                 </li>
             </ul>
         </div>
     </div> 
-</div>S
+</div>
 </header>
-
 <!--Comienzo Del Main-->
 <main>
-
 <!--Colocando Card Con los Productos-->
-    <div id="productos" class="container">
+    <div id="lista-productos" class="container">
         <div class="seguridad">
             <div class="card" style="width: 18rem;">
                 <img src="./assets/img/D_NQ_NP_963820-MLA49967077030_052022-W.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">AX-PRO</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
                 </div>
             </div>
         
@@ -81,7 +79,7 @@
                 <div class="card-body">
                   <h5 class="card-title">EZVIZ C3A</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
                 </div>
             </div>
         
@@ -90,7 +88,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Hik 8 Camaras</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -99,7 +97,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Kit ColorVu 4 Camaras</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -108,7 +106,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Kit Alarma FULL</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -117,7 +115,7 @@
                 <div class="card-body">
                   <h5 class="card-title">kIT Alarma Basica</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -126,7 +124,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -135,7 +133,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
                 </div>
             </div>
 
