--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--Comienzo del Header-->
 
 <header>
-  <!-- <ul class="nav justify-content-end">
+  <ul class="nav justify-content-end">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Active</a>
     </li>
@@ -26,7 +26,7 @@
     <li class="nav-item">
       <a class="nav-link disabled">Disabled</a>
     </li>
-  </ul> -->
+  </ul>
   <!-- Agregando el Carrito -->
   <div class="container">
     <div class="row">
@@ -69,17 +69,17 @@
                 <img src="./assets/img/D_NQ_NP_963820-MLA49967077030_052022-W.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">AX-PRO</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
+                  <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
+                  <a href="#" class="btn btn-primary agregar-carrito" data-id="1">Agregar al Carrito</a>
                 </div>
             </div>
         
             <div class="card" style="width: 18rem;">
-                <img src="./assets/img/EZVIZ-C3A-IndoorOutdoor-Battery-Camera-Kisumu.jpg" class="card-img-top" alt="...">
+                <img src="./assets/img/EZVIZ-C3A-IndoorOutdoor-Battery-Camera-Kisumu.jpg" class="imagen-productos" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">EZVIZ C3A</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
+                  <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
+                  <a href="#" class="btn btn-primary agregar-carrito" data-id="2">Agregar al Carrito</a>
                 </div>
             </div>
         
@@ -87,8 +87,8 @@
                 <img src="./assets/img/kit-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Hik 8 Camaras</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
+                  <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
+                  <a href="#" class="btn btn-primary agregar-carrito" data-id="3">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -96,8 +96,8 @@
                 <img src="./assets/img/kit-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Kit ColorVu 4 Camaras</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
+                  <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
+                  <a href="#" class="btn btn-primary agregar-carrito" data-id="4">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -105,8 +105,8 @@
                 <img src="./assets/img/kit-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Kit Alarma FULL</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
+                  <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
+                  <a href="#" class="btn btn-primary agregar-carrito" data-id="5">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -114,8 +114,8 @@
                 <img src="./assets/img/kit-4.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">kIT Alarma Basica</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
+                  <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
+                  <a href="#" class="btn btn-primary agregar-carrito" data-id="6">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -123,8 +123,8 @@
                 <img src="./assets/img/LU-EZ-KIT-107.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
+                  <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
+                  <a href="#" class="btn btn-primary agregar-carrito" data-id="7">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -132,8 +132,8 @@
                 <img src="./assets/img/noticias_ezvizC8C_1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary agregar-carrito">Agregar al Carrito</a>
+                  <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
+                  <a href="#" class="btn btn-primary agregar-carrito" data-id="8">Agregar al Carrito</a>
                 </div>
             </div>
 
