--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
                                 <table id="datos-carrito" class="u-full-width">
                                     <thead>
                                         <tr>
-                                            <th>Imagen</th>
-                                            <th>Nombre</th>
-                                            <th>Precio</th>
-                                            <th>Cantidad</th>
+                                            <th>Productos Seleccionados</th>
                                             <th></th>
                                         </tr>
                                     </thead>
@@ -70,7 +67,7 @@
                 <div class="card-body">
                   <h5 class="card-title">AX-PRO</h5>
                   <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
-                  <a href="#" class="btn btn-primary agregar-carrito" data-id="1">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary borrar-producto agregar-carrito" data-id="1">Agregar al Carrito</a>
                 </div>
             </div>
         
@@ -79,7 +76,7 @@
                 <div class="card-body">
                   <h5 class="card-title">EZVIZ C3A</h5>
                   <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
-                  <a href="#" class="btn btn-primary agregar-carrito" data-id="2">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary borrar-producto agregar-carrito" data-id="2">Agregar al Carrito</a>
                 </div>
             </div>
         
@@ -88,7 +85,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Hik 8 Camaras</h5>
                   <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
-                  <a href="#" class="btn btn-primary agregar-carrito" data-id="3">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary borrar-producto agregar-carrito" data-id="3">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -97,7 +94,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Kit ColorVu 4 Camaras</h5>
                   <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
-                  <a href="#" class="btn btn-primary agregar-carrito" data-id="4">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary borrar-producto agregar-carrito" data-id="4">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -106,7 +103,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Kit Alarma FULL</h5>
                   <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
-                  <a href="#" class="btn btn-primary agregar-carrito" data-id="5">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary borrar-producto agregar-carrito" data-id="5">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -115,7 +112,7 @@
                 <div class="card-body">
                   <h5 class="card-title">kIT Alarma Basica</h5>
                   <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
-                  <a href="#" class="btn btn-primary agregar-carrito" data-id="6">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary borrar-producto agregar-carrito" data-id="6">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -124,7 +121,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
-                  <a href="#" class="btn btn-primary agregar-carrito" data-id="7">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary borrar-producto agregar-carrito" data-id="7">Agregar al Carrito</a>
                 </div>
             </div>
 
@@ -133,7 +130,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="precio">Some quick example text.<span class="u-pull-right ">$180,000</span></p>
-                  <a href="#" class="btn btn-primary agregar-carrito" data-id="8">Agregar al Carrito</a>
+                  <a href="#" class="btn btn-primary borrar-producto agregar-carrito" data-id="8">Agregar al Carrito</a>
                 </div>
             </div>
 
